# influence

./: README.md
.github/workflows/: back-cd-pvr.yml  back-cd.yml  back-ci.yml  bot-cd-pvr.yml  bot-cd.yml  bot-ci.yml  front-cd-pvr.yml  front-cd.yml  front-ci.yml
back/: fly.toml  package-lock.json  package.json  tsconfig.json
back-pvr/: fly.toml  package-lock.json
back-pvr/prisma/: schema.prisma  seed.ts
back-pvr/src/controllers/: characters.controller.ts  login.controller.ts  machines.controller.ts  periods.controller.ts  pvpGames.controller.ts  scale.controller.ts
back-pvr/src/middlewares/: authentication.middleware.ts  (+1 more)
back/prisma/: schema.prisma  seed.ts
back/src/: app.ts  index.ts
bot/: .gitignore  Dockerfile  Procfile  fly.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
bot/bot/: main.py
bot/bot/events/: message.py
bot/influbot/: discord_client.py  main.py
bot/influbot/api/: api.py
bot/influbot/events/: member_update.py  message.py  ready.py
bot/influbot/handlers/: display_names.py  influtons.py  pvp.py  pvp_stats.py  pvp_tops.py  ready_members.py
bot/influbot/shared/: models.py  utils.py
bot/tests/: test_bot.py
front/: .env  .gitignore  fly-pvr.toml  fly.toml  package-lock.json  package.json  rollup.config.js  server.js  svelte.config.js  tsconfig.json
front-pvr/: .eslintrc  .prettierrc  package.json
front/config/: webpack.common.js  webpack.dev.js  webpack.prod.js
front/public/: global.css  index.html
front/src/: App.svelte  Providers.svelte  Providers.tsx  Root.svelte  Router.tsx  index.tsx  main.ts  utils.ts
(+200 files in other folders)
