[tool.poetry]
name = "influbot"
version = "0.1.0"
description = ""
authors = ["Adrien Mergalet <22292245+AdrienMergalet@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^1.7.3"
python-dotenv = "^0.20.0"
build = "^0.8.0"
arrow = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
