[metadata]
name = influbot
version = 0.0.1
author = Adrien Mergalet
description = Influence Discord bot
url = https://github.com/amglt/influence
project_urls =
    Bug Tracker = https://github.com/amglt/influence/issues
classifiers =
    Programming Language :: Python :: 3.10.4
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = influbot
packages = find:
python_requires = >=3.10.4

[options.packages.find]
where = influbot